--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/styled-engine": "^5.11.8",
+    "@mui/x-date-pickers": "^5.0.18",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "bootstrap": "^5.2.3",
     "env-cmd": "^10.1.0",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
