--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "bootstrap": "^5.2.3",
     "env-cmd": "^10.1.0",
     "moment": "^2.29.4",
+    "mui-image": "^1.0.7",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
